<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#1F6D87"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="229dp"
        android:layout_height="91dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="TODO"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@android:color/background_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:text="@string/independance" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_text" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_text" />

    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/pre_button"
        android:contentDescription="@string/previous"
        android:src="@drawable/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ImageButton>

    <ImageButton
        android:id="@+id/next_button"
        android:contentDescription="@string/next"
        android:src="@drawable/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ImageButton>

</LinearLayout>




</LinearLayout>